Fix collection issues
 - Fix icon picker not on top of hovered post-its

 - Fix collection not using REST response

 - Fix documentCount not showing

 - Fix service not using DTOs

--- a/src/main/scripts/src/app/shared/perspectives/collections/post-it/post-it-collections-perspective.component.scss
+++ b/src/main/scripts/src/app/shared/perspectives/collections/post-it/post-it-collections-perspective.component.scss
@@ -133,12 +133,15 @@
   }
 
   .post-it:hover, .selected {
-    z-index: 100;
     box-shadow: $shadow-up;
 
     & > * {
       opacity: 1 !important;
     }
+  }
+
+  .selected {
+    z-index: 100;
   }
 
   .add-collection {
